@@ -88,13 +88,11 @@ client<Version, NextLayer>::async_auth(Args&&... args) {
         }
     }
     else {
-        return [this](auto&&... all_args) {
-            auto all = hana::make_tuple(std::forward<decltype(all_args)>(all_args)...);
-            constexpr auto N = sizeof...(all_args);
-            auto back = hana::at_c<N - 1>(force_move(all));
-            return hana::unpack(
-                hana::drop_back(force_move(all), hana::size_c<1>),
-                [this, back = force_move(back)](auto&&... rest_args) mutable {
+        auto all = hana::make_tuple(std::forward<Args>(args)...);
+        auto back = hana::at_c<sizeof...(Args) - 1>(force_move(all));
+        return hana::unpack(
+            hana::drop_back(force_move(all), hana::size_c<1>),
+            [this, back = force_move(back)](auto&&... rest_args) mutable {
                     static_assert(
                         std::is_constructible_v<
                             auth_packet,
@@ -120,7 +118,6 @@ client<Version, NextLayer>::async_auth(Args&&... args) {
                     }
                 }
             );
-        }(std::forward<Args>(args)...);
     }
 }
 
