@@ -152,18 +152,15 @@ basic_endpoint<Role, PacketIdBytes, NextLayer>::async_underlying_handshake(
             Args...
         >::value
     ) {
-        return [this](auto&&... all_args) {
-            auto all = hana::make_tuple(std::forward<decltype(all_args)>(all_args)...);
-            constexpr auto N = sizeof...(all_args);
-            return impl_type::async_underlying_handshake_impl(
-                impl_,
-                hana::drop_back(force_move(all), hana::size_c<1>),
-                hana::at_c<N - 1>(force_move(all)) // token
-            );
-        }(std::forward<Args>(args)...);
+        auto all = hana::make_tuple(std::forward<Args>(args)...);
+        return impl_type::async_underlying_handshake_impl(
+            impl_,
+            hana::drop_back(force_move(all), hana::size_c<1>),
+            hana::at_c<sizeof...(Args) - 1>(force_move(all)) // token
+        );
     }
     else {
-        auto all = hana::tuple<Args...>(std::forward<Args>(args)...);
+        auto all = hana::make_tuple(std::forward<Args>(args)...);
         return impl_type::async_underlying_handshake_impl(
             impl_,
             force_move(all)
