@@ -3,7 +3,8 @@
 = History
 
 == 10.2.7
-* Removed unintentional copy requiment from some of async functions parameter. #437
+* Removed unintentional copy requiment from some of async functions parameter. #439, #440
+* Fixed Heap-use-after-free during broker shutdown. #437
 * Rifined documents. #435
 * Added TLS Websocket verify none port to broker for browser. #434
 * Added Cerfiticate file's digitalSignature to keyUsage. #432
